bizinikiwi/pezframe/support/test/tests/pezpallet_ui/duplicate_call_attr.stderr
error: Invalid duplicated attribute
  --> tests/pezpallet_ui/duplicate_call_attr.rs:39:15
   |
39 |     #[pezpallet::call]
   |                  ^^^^
